prevent jump content on scroll

--- a/app/globals.css
+++ b/app/globals.css
@@ -82,7 +82,7 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+  overflow: hidden;
   height: 100%;
   color: #CCCCCC;
 }
